<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Square</string>
    <string name="error_unable_to_connect">No internet connection</string>
    <string name="intro_title_1">Discover and enjoy\nvenues in your city</string>
    <string name="intro_title_2">Attend your favourite places\nand share the experience</string>
    <string name="intro_title_3">Bring the game into\nyour real life</string>
    <string name="intro_content_1">Wide selection of premium perks like\nrestaurants, gyms, beauty salons and\nmuch more all around you.</string>
    <string name="intro_content_2">Surf through the multiple tailored\noffers available everyday, book your\nspot and promote them.</string>
    <string name="intro_content_3">Raise your ranking, gain credits and\nunlock new features to claim\nawesome rewards.</string>
    <string name="next">Next</string>
    <string name="next_step">Next &#8594;</string>
    <string name="lets_start">LET\'S START</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="remember_to">Remember to:</string>
    <string name="avoid_to">Avoid to:</string>
    <string name="picture_typologies">Picture typologies:</string>
    <string name="event_details">Event Details</string>
    <string name="one_way_from">One way from</string>
    <string name="return_to">Return to</string>
    <string name="transfer">Transfer</string>
    <string name="status">Status:</string>
    <string name="no_dinner_available">No dinner\navailable</string>
    <string name="no_ride_available">No ride\navailable</string>
    <string name="check_out_from_party">Check out from party</string>
    <string name="party">Party</string>
    <string name="your_final_selection">Your final selection</string>
    <string name="accept">Accept</string>
    <string name="app_not_installed">This application is not installed on your device</string>
    <string name="upload_action_prntscr">Upload the print screen\nof the action you just done.</string>
    <string name="upload_action_label">Action required to speed up the process in order to release you the credits.</string>
    <string name="upload_photo_gallery">Take a photo or upload a picture from your gallery</string>
    <string name="upload_photo_label">If the picture will be selected from the venue, you\'ll receive 50 credits</string>
    <string name="insta_story_remember_1">Make tags visible</string>
    <string name="insta_story_remember_2">The story should be at least 5 seconds</string>
    <string name="insta_story_remember_3">Tag us @square.app</string>
    <string name="insta_story_remember_4">Tag the venue using %s</string>
    <string name="insta_story_avoid_1">Don\'t remove the story before it expires</string>
    <string name="insta_story_avoid_2">Don\'t repost a story of a friend, covering the tags with other content</string>
    <string name="insta_post_remember_1">Make tags visible</string>
    <string name="insta_post_remember_2">Keep the post on your page for a minimum of 48 hours</string>
    <string name="insta_post_remember_3">Tags to use: %s, @square.app</string>
    <string name="insta_post_remember_4">Hashtags: %s, @squareapp</string>
    <string name="insta_post_avoid_1">Don\'t remove the post before the given time</string>
    <string name="insta_post_avoid_2">Be creative, don\'t repost someone else content</string>
    <string name="tripadvisor_remember_1">Rate the venue 4–5 stars</string>
    <string name="tripadvisor_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="tripadvisor_avoid_1">Never mention SQUARE app in your review</string>
    <string name="tripadvisor_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="yelp_remember_1">Rate the venue 4–5 stars</string>
    <string name="yelp_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="yelp_avoid_1">Never mention SQUARE app in your review</string>
    <string name="yelp_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="google_places_remember_1">Rate the venue 4–5 stars</string>
    <string name="google_places_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="google_places_avoid_1">Never mention SQUARE app in your review</string>
    <string name="google_places_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="fb_review_remember_1">Rate the venue 4–5 stars</string>
    <string name="fb_reviewgoogle_maps_remember_2">Leave an authentic comment about: food, service, location</string>
    <string name="fb_review_avoid_1">Never mention SQUARE app in your review</string>
    <string name="fb_review_avoid_2">Don\'t make your comment like a shopping list. Argument the different subjects and tell your experience</string>
    <string name="fb_post_remember_1">Make tags visible</string>
    <string name="fb_post_remember_2">Keep the post on your page for a minimum of 48 hours</string>
    <string name="fb_post_remember_3">Tags to use: %s, @square.app</string>
    <string name="fb_post_remember_4">Hashtags: %s, @squareapp</string>
    <string name="fb_post_avoid_1">Don\'t remove the post before the given time</string>
    <string name="fb_post_avoid_2">Be creative, don\'t repost someone else content</string>
    <string name="fb_story_remember_1">Make tags visible</string>
    <string name="fb_story_remember_2">The story should be at least 5 seconds</string>
    <string name="fb_story_remember_3">Tag us @square.app</string>
    <string name="fb_story_remember_4">Tag the venue using %s</string>
    <string name="fb_story_avoid_1">Don\'t remove the story before it expires</string>
    <string name="fb_story_avoid_2">Don\'t repost a story of a friend, covering the tags with other content</string>
    <string name="photo_remember_1">Be creative</string>
    <string name="photo_remember_2">Create a high quality content</string>
    <string name="photo_still_life">(table composition, food in the picture, etc...)</string>
    <string name="photo_location">(atmosphere, venue details, etc...)</string>
    <string name="photo_muse">(the model appears in the picture frame)</string>
    <string name="action_delete_label">Are you sure you want to delete this action?</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_dialog_content">Are yo sure you want to join the selected campaign? Only if accepted, you will be charged for</string>
    <string name="facebook_package">com.facebook.katana</string>
    <string name="instagram_package">com.instagram.android</string>
    <string name="tripadvisor_package">com.tripadvisor.tripadvisor</string>
    <string name="google_maps_package">com.google.android.apps.maps</string>
    <string name="yelp_package">com.yelp.android</string>
    <string name="action_btn_fb">Open facebook</string>
    <string name="action_btn_instagram">Open instagram</string>
    <string name="action_btn_tripadvisor">Open tripadvisor</string>
    <string name="action_btn_google_places">Open maps</string>
    <string name="action_btn_yelp">Open yelp</string>
    <string name="action_btn_photo">Upload picture</string>
    <string name="unknown_error">Error occurred. Please try again</string>
    <string name="fill_profile_title">Create Profile</string>
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_birth">Date of birth</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="hint_gender">Gender</string>
    <string name="nationality">Nationality:</string>
    <string name="nationality_pure">Nationality</string>
    <string name="fill_profile_counter_1" tools:ignore="TypographyFractions">1/3</string>
    <string name="email">Email:</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="mobile_number">Your mobile number</string>
    <string name="mother_agency">Mother agency:</string>
    <string name="mother_agency_">Mother agency</string>
    <string name="hint_current_agency">Current agency</string>
    <string name="fill_profile_counter_2">2/3</string>
    <string name="city">City</string>
    <string name="agency_name">Agency name</string>
    <string name="mandatory_fields">These fields are mandatory</string>
    <string name="birthday_format">%s of %s</string>
    <string name="birthday_display_format">%s/%s/%s</string>
    <string name="action_map">Map</string>
    <string name="action_places">Places</string>
    <string name="action_redemptions">Redemptions</string>
    <string name="action_profile">Profile</string>
    <string name="invite_button_text">Invite your friends</string>
    <string name="name_format">%s %s</string>
    <string name="level_default">0</string>
    <string name="credits_format">%d Credits</string>
    <string name="credits_plus_format">+ %d credits</string>
    <string name="error_occurred">An error occurred!</string>
    <string name="subscription_status_cannot_obtained">Your subscription status\ncan not be obtained</string>
    <string name="check_internet_connection">Please check your internet connection.</string>
    <string name="shareContent">Join us: https://play.google.com/store/apps/details?id=com.squaremm.android\nReferral code: %s</string>
    <string name="hint_referral">Referral</string>
    <string name="permsission_needed">We need location permissions to show places near to you!</string>
    <string name="location_failed_message">Failed to get location</string>
    <string name="credits">Credits</string>
    <string name="credits_lowercase">credits</string>
    <string name="dinner_plan">Dinner Plan</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="chat_with_the_driver">Chat with the driver</string>
    <string name="be_ready_pick_up">Please be ready outside of the restaurant at %s for the driver pick up.</string>
    <string name="color">Color:</string>
    <string name="type_your_message">Type your message…</string>
    <string name="couldnt_send">Couldn\'t send.</string>
    <string name="place_detail_title">Place info</string>
    <string name="page_about">About</string>
    <string name="page_offer">Offers</string>
    <string name="page_book">Book</string>
    <string name="claim">Claim</string>
    <string name="deny">Cancel</string>
    <string name="places_title">Places list</string>
    <string name="redemptions_title">Redemptions list</string>
    <string name="claimed">Claimed</string>
    <string name="do_you_need_driver">Do you need\nthe driver to go?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="point_of_departure">Point of departure:</string>
    <string name="select_your_location">Select your location</string>
    <string name="stop_1">Stop 1:</string>
    <string name="destination">Destination:</string>
    <string name="you_can_update_pick">You can update the pick up info within 2 hours from the beginning of the timeframe.</string>
    <string name="select_location">Select location</string>
    <string name="do_you_need_driver_return">Do you need\nthe driver to return?</string>
    <string name="point_of_return">Point of return:</string>
    <string name="departure">Departure:</string>
    <string name="choose_gender">Choose your gender</string>
</resources>