<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_fill_profile_1">

    <EditText
        android:id="@+id/formProfileName"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/formProfileSurname"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_surname"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/formProfileBirth"
        style="@style/InputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:foreground="?attr/selectableItemBackground"
        android:hint="@string/hint_birth"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/formProfileGender"
            style="@style/InputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/hint_gender"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text" />

        <RadioGroup
            android:id="@+id/formProfileGenderGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/formProfileGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:buttonTint="@color/login_button"
                android:checked="true"
                android:text="@string/gender_female"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/formProfileGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/login_button"
                android:text="@string/gender_male"
                android:textSize="17sp" />
        </RadioGroup>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/input_background"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/formFlag"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/flag_ac" />

        <TextView
            android:id="@+id/formProfileNationality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/nationality"
            android:paddingTop="12dp"
            android:layout_marginEnd="24dp"
            app:layout_goneMarginStart="24dp"
            android:paddingBottom="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/formFlag"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>