<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false"
    android:background="@android:color/white" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        style="@style/Models22Text"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_gender"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/genderFemale"
        style="@style/Models16BoldText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/nice_button_red_pink"
        android:text="@string/gender_female"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginTop="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp" />

    <Button
        android:id="@+id/genderMale"
        style="@style/Models16BoldText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/nice_button_pink_red"
        android:text="@string/gender_male"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp" />
</LinearLayout>

</androidx.cardview.widget.CardView>